- Fixed bug #50018 (Typo in spl_limit_it_seek())