ext/spl/tests/iterator_032.phpt
@@ -45,6 +45,6 @@ int(1)
 int(2)
 Cannot seek to 0 which is below the offset 1
 int(3)
-Cannot seek to 3 which is behind offest 1 plus count 2
+Cannot seek to 3 which is behind offset 1 plus count 2
 bool(false)
 ===DONE===
